# OpenAPI.yml
@@ -11,10 +11,13 @@ info:
     url: https://opensource.org/licenses/MIT
 servers:
   # Added by API Auto Mocking Plugin
+  # Added by API Auto Mocking Plugin
+  - description: SwaggerHub API Auto Mocking
+    url: https://virtserver.swaggerhub.com/kamar-rs/kamar-rs/1.0.0
   - description: SwaggerHub API Auto Mocking
     url: https://virtserver.swaggerhub.com/Anti-Gen/CAPSTONE-PORJECT-kamarRS/1.0.0
   - description: kamarRS server
-    url: http://34.143.247.242:80
+    url: http://35.198.253.37:80
   - description: kamarRS domain
     url: not yet decided
 
@@ -44,8 +47,6 @@ tags:
     description: "Manajemen data reservasi tempat tidur"
   - name: Invoice
     description: "Midtrans Callback"
-  - name: Kamar Rs Team
-    description: "Manajemen data tim kamar rs"
   
 
 paths:
@@ -143,41 +144,6 @@ paths:
           $ref: '#/components/responses/404'
         '500':
           $ref: '#/components/responses/500'
-  /login/kamarrsteams:
-    post:
-      tags:
-        - Auth
-      summary: Login
-      description: Login akun kamar rs team
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              example:
-                email: "suyo@gmail.com"
-                kata_sandi: "123456"
-      responses:
-        '201':
-          description: Login berhasil.
-          content:
-            application/json:
-              schema:
-                type: object
-                example:
-                  status: "success"
-                  message: "Login berhasil"
-                  data:
-                      id: 1
-                      email: "suyo@siloam.com"
-                      peran: "super admin"
-                      token:  "afkdnnifnnj&h3"
-                      
-        '404' :
-          $ref: '#/components/responses/404'
-        '500':
-          $ref: '#/components/responses/500'
   /users:
     post:
       tags:
@@ -195,7 +161,7 @@ paths:
               example:
                 nama: "budi"
                 email:  "budi@mail.com"
-                nik: "7109287651997"
+                no_nik: "7109287651997"
                 no_kk:  "7190398173764"
                 kata_sandi: "qwerty"
                 no_telepon: "081234"
@@ -237,7 +203,7 @@ paths:
               example:
                 nama: "budi"
                 email:  "budi@mail.com"
-                nik: "7109287651997"
+                no_nik: "7109287651997"
                 no_kk:  "7190398173764"
                 kata_sandi: "qwerty"
                 no_telepon: "081234"
@@ -284,7 +250,7 @@ paths:
                      id : 1
                      nama: "budi"
                      email:  "budi@mail.com"
-                     nik: "7109287651997"
+                     no_nik: "7109287651997"
                      no_kk:  "7190398173764"
                      no_telepon: "081234"
                      
@@ -360,8 +326,38 @@ paths:
                   message: "register gagal."
         '500':
           $ref: '#/components/responses/500'
+    get:
+      tags:
+        - Hospital staffs
+      summary: Get staff data
+      description: Menampilkan data staff rumah sakit
+      security:
+        - JWTAuth: []
+      responses:
+        '200':
+          description: A list of staff
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  status: "success"
+                  message: "success get detail staff"
+                  data:
+                     id : 1
+                     nama: teguh
+                     email: teguh@mail.com
+                     kata_sandi: "12345"
+                     peran: Admin
+                     hospital id : 1
+                
+        '404':
+          $ref: '#/components/responses/404'
 
+        '500':
+          $ref: '#/components/responses/500'
 
+  /staffs/{id_staff}:
     put:
       tags:
         - Hospital staffs
@@ -369,6 +365,15 @@ paths:
       description: Memperbarui data staff Rumah sakit
       security:
         - JWTAuth: []
+      parameters:
+        - name: id_staff
+          description: "id patient"
+          required: true
+          in: path
+          schema:
+            description: "id patient"
+            type: integer
+            example: 1
       requestBody:
         required: true
         content:
@@ -411,6 +416,15 @@ paths:
       description: Menghapus akun staff rumah sakit
       security:
         - JWTAuth: []
+      parameters:
+        - name: id_staff
+          description: "id patient"
+          required: true
+          in: path
+          schema:
+            description: "id patient"
+            type: integer
+            example: 1
       responses:
         '201':
           description: Delete berhasil.
@@ -427,38 +441,7 @@ paths:
         '500':
           $ref: '#/components/responses/500'
 
-    get:
-      tags:
-        - Hospital staffs
-      summary: Get staff data
-      description: Menampilkan data staff rumah sakit
-      security:
-        - JWTAuth: []
-      responses:
-        '200':
-          description: A list of staff
-          content:
-            application/json:
-              schema:
-                type: object
-                example:
-                  status: "success"
-                  message: "success get detail staff"
-                  data:
-                     id : 1
-                     nama: teguh
-                     email: teguh@mail.com
-                     kata_sandi: "12345"
-                     peran: Admin
-                     hospital: 
-                       id:  1
-                       nama: "RSUD dr. Chasbullah Abdulmadjid"
-                
-        '404':
-          $ref: '#/components/responses/404'
 
-        '500':
-          $ref: '#/components/responses/500'
 
 ##############################################################
 ##############################################################
@@ -1789,7 +1772,7 @@ paths:
                 example:
                   status: "failed"
                   message: "failed create reservations"
-    
+  /practices/{practice_id}/reservations:   
     get:
       tags:
         - Check Up Reservations
@@ -1801,7 +1784,7 @@ paths:
         - name: practice_id
           description: "practice_id"
           required: true
-          in: query
+          in: path
           schema:
             description: "practice_id"
             type: integer
@@ -1823,7 +1806,71 @@ paths:
                       {
                         id: 255,
                         tanggal_praktik: "2022-12-30",
-                        status: "available",
+                        policlinic_id: 3,
+                      }
+                    patient:
+                      {
+                        id: 5,
+                        no_kk: "321654987321654",
+                        nik: "321654987321654",
+                        nama_pasien: "monkey d. luffy",
+                      }
+                  - id: 666
+                    practice_id: 255
+                    practice:
+                      {
+                        id: 255,
+                        tanggal_praktik: "2022-12-30",
+                        policlinic_id: 3,
+                      }
+                    patient:
+                      {
+                        id: 25,
+                        no_kk: "321654987321666",
+                        nik: "321654987321666",
+                        nama_pasien: "monkey d. dragon",
+
+                      }
+                  
+        "400" :
+          $ref : "#/components/responses/400" 
+        '500':
+          $ref: "#/components/responses/500"
+          
+  /reservations/{reservation_id}/:
+    get:
+      tags:
+        - Check Up Reservations
+      summary: Get Reservation Detail 
+      description: mendapatkan detail reservasi
+      security: 
+        - JWTAuth: []
+      parameters:
+        - name: reservation_id
+          description: "reservation_id"
+          required: true
+          in: path
+          schema:
+            description: "reservation_id"
+            type: integer
+            example: 555
+      responses:
+        '200':
+          description: "succes get daily practice id"
+          content:
+            application/json:
+              schema: 
+                type: object
+              example:
+                status: "succes"
+                message: "success get daily practice by id"
+                data:
+                  - id: 555
+                    practice_id: 255
+                    practice:
+                      {
+                        id: 255,
+                        tanggal_praktik: "2022-12-30",
                         policlinic_id: 3,
                       }
                     patient:
@@ -1848,42 +1895,7 @@ paths:
                         foto_ktp: "kanohhtihafnuef.jpg",
                         foto_bpjs: "kanjtquihgsa.jpg",
                       }
-                  - id: 666
-                    practice_id: 255
-                    practice:
-                      {
-                        id: 255,
-                        tanggal_praktik: "2022-12-30",
-                        status: "available",
-                        policlinic_id: 3,
-                      }
-                    patient:
-                      {
-                        id: 25,
-                        no_kk: "321654987321666",
-                        nik: "321654987321666",
-                        nama_pasien: "monkey d. dragon",
-                        jenis_kelamin: "laki-laki",
-                        usia: 44,
-                        nama_wali: "monkey d. garp",
-                        no_telepon_wali: "081321654666",
-                        alamat_ktp: "wind mill village",
-                        provinsi_ktp: "east blue",
-                        kabupaten/kota_ktp: "doma kingdom",
-                        alamat_domisili: "thousand sunny",
-                        provinsi_domisili: "grand line",
-                        kabupaten/kota_domisili: "always moving",
-                        tanggal_lahir: "1970-08-01",
-                        no_bpjs: "789456666",
-                        kelas_bpjs: "kelas_1",
-                        foto_ktp: "kanohhtihafnuef.jpg",
-                        foto_bpjs: "kanjtquihgsa.jpg",
-                      }
-                  
-        "400" :
-          $ref : "#/components/responses/400" 
-        '500':
-          $ref: "#/components/responses/500"
+
 ##############################################################
 ##############################################################
 
@@ -2135,24 +2147,14 @@ paths:
                 metode_pembayaran: "transfer_va_bca"
       responses:
         '200':
-          description: "success create payment for bed reservation"
+          description: "success update payment for bed reservation"
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/ResponseWithoutData"
               example:
                 status: "success"
-                message: "success create payment"
-                data: 
-                  hospital_id: 3
-                  patient_id: 255
-                  biaya_registrasi: 25000
-                  kode_daftar: "order-912"
-                  status_pembayaran: "belum dibayar"
-                  metode_pembayaran: "transfer_va_bca"
-                  qr_string : ""
-                  link_pembayaran: "https://midtrans.bayar"
-
+                message: "success update policlinic"
         '400':
           $ref: "#/components/responses/400"
         "401" :
@@ -2238,45 +2240,6 @@ paths:
         "500":
           $ref: "#/components/responses/500"
 
-  /kamarrsteams: 
-    post:
-      tags:
-        - Kamar Rs Team
-      summary: add kamar rs team account
-      description: Menambahkan data tim kamar rs
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                email:
-                  type: string
-                kata_sandi:
-                  type: string
-              example:
-                email: "trial@gmail.com"
-                kata_sandi: "password"
-      responses:
-        '201':
-          description: penambahan data berhasil
-          content:
-            application/json:
-              schema:
-                type: object
-                example:
-                  status: "success"
-                  message: "success create kamar rs team"
-        '500':
-          description: penambahan data gagal
-          content:
-            application/json:
-              schema:
-                type: object
-                example:
-                  status: "failed"
-                  message: "failed create kamar rs team"
 
 
 
@@ -2612,4 +2575,3 @@ components:
           example:
             status: "failed"
             message: "internal server error"
-
